<resources>
    <string name="app_name">Smart Canteen</string>
    <string name="settings_name">Settings</string>
    <string name="table_1">Table 1</string>
    <string name="table_2">Table 2</string>
    <string name="table_3">Table 3</string>
    <string name="table_4">Table 4</string>
    <string name="table_5">Table 5</string>
    <string name="percentage_occupied">Percentage Occupied:</string>
    <string name="eco">Eco Seat</string>
    <string name="eco_seat_desc">
        Eco Seat tells you which saves the most electricity
    </string>
    <string name="eco_seat">Seat Here!</string>
    <string name="firebase_url">"https://smart-canteen-45be9.firebaseio.com/"</string>
</resources>
