<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main"
    android:id="@+id/main_layout">
    <!--left-->
    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent">

        <android.support.design.card.MaterialCardView
            android:layout_marginLeft="@dimen/mtrl_card_spacing"
            android:layout_marginTop="@dimen/mtrl_card_spacing"
            android:layout_marginRight="@dimen/mtrl_card_spacing"
            android:minHeight="200dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">
            <LinearLayout
                android:gravity="center|top"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/percentage_occupied"
                    />

                <com.example.garyo.smartcanteen.OtherLibraries.CircleProgress
                    android:id="@+id/circle_progress"
                    android:layout_marginTop="20dp"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    app:circle_finished_color="@color/colorRed"
                    app:circle_unfinished_color="@color/colorGreen"
                    app:circle_progress="20"
                   />
                <TextView
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:text="@string/eco_seat_desc"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />



                <Button
                    android:id="@+id/eco_button"
                    android:height="100dp"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:text="@string/eco"
                    android:background="@drawable/ripple"
                    android:layout_marginTop="5dp"
                    android:layout_width="150dp"
                    android:layout_height="100dp" />




            </LinearLayout>


        </android.support.design.card.MaterialCardView>

        <android.support.design.card.MaterialCardView
            android:id="@+id/table1_card"
            android:layout_marginLeft="@dimen/mtrl_card_spacing"
            android:layout_marginTop="@dimen/mtrl_card_spacing"
            android:layout_marginRight="@dimen/mtrl_card_spacing"
            android:layout_marginBottom="12dp"
            android:minHeight="200dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/table_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/table_1"
                    android:textAlignment="center" />

            </LinearLayout>


        </android.support.design.card.MaterialCardView>


    </LinearLayout>


    <!--Right-->
    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent">


        <android.support.v7.widget.CardView
            android:id="@+id/table2_card"
            android:layout_marginLeft="@dimen/mtrl_card_spacing"
            android:layout_marginTop="@dimen/mtrl_card_spacing"
            android:layout_marginRight="@dimen/mtrl_card_spacing"

            android:minHeight="200dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"

            >
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@id/table_name"
                    android:text="@string/table_2"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/table3_card"
            android:layout_marginLeft="@dimen/mtrl_card_spacing"
            android:layout_marginTop="@dimen/mtrl_card_spacing"
            android:layout_marginRight="@dimen/mtrl_card_spacing"

            android:minHeight="200dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"

            >
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@id/table_name"
                    android:text="@string/table_3"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/table4_card"
            android:layout_marginLeft="@dimen/mtrl_card_spacing"
            android:layout_marginTop="@dimen/mtrl_card_spacing"
            android:layout_marginRight="@dimen/mtrl_card_spacing"
            android:layout_marginBottom="12dp"
            android:minHeight="200dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"

            >
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@id/table_name"
                    android:text="@string/table_4"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </android.support.v7.widget.CardView>




    </LinearLayout>
</LinearLayout>
